@@ -60,6 +60,10 @@ Marcelo Vanzin and Daniel Hahler for contributing to this release.
   update Java without reinstalling jEdit.
   (SF.net bug #1227497 - Kazutoshi Satoda)
 
+- Explicit "mode" value in props for jEdit.openFile() or
+  jEdit.openTemporary() was overwritten by the mode in recent files.
+  (Kazutoshi Satoda)
+
 }}}
 {{{ Miscellaneous
 
